--- a/default.project.json
+++ b/default.project.json
@@ -3,23 +3,15 @@
   "tree": {
     "$className": "DataModel",
 
-    "ReplicatedStorage": {
-      "Shared": {
-        "$path": "src/shared"
-      }
-    },
-
     "ServerScriptService": {
-      "Server": {
-        "$path": "src/server"
-      }
-    },
-
-    "StarterPlayer": {
-      "StarterPlayerScripts": {
-        "Client": {
-          "$path": "src/client"
-        }
+      "PBSAdmin": {
+        "$properties": {
+          "Attributes": {
+            "isVerified_only": {"Bool": false},
+            "leaderstats": {"Bool": true}
+          }
+        },
+        "$path": "src/PBSAdmin"
       }
     },
 
