work on moving over to new cmd system

--- a/default.project.json
+++ b/default.project.json
@@ -11,7 +11,14 @@
             "leaderstats": {"Bool": true}
           }
         },
-        "$path": "src/PBSAdmin"
+        "$path": "src/PBSAdmin",
+        "RoleAssets": {
+          "$className": "Folder",
+          "none": {"$className": "Folder"},
+          "member": {"$className": "Folder"},
+          "admin": {"$className": "Folder"},
+          "owner": {"$className": "Folder"}
+        }
       }
     },
 
