--- a/default.project.json
+++ b/default.project.json
@@ -3,6 +3,12 @@
   "tree": {
     "$className": "DataModel",
 
+    "ReplicatedStorage": {
+      "Utils": {
+        "$path": "Packages"
+      }
+    },
+
     "ServerScriptService": {
       "PBSAdmin": {
         "$properties": {
