--- a/default.project.json
+++ b/default.project.json
@@ -16,15 +16,18 @@
     },
 
     "ServerScriptService": {
-      "PBSAdmin": {
-        "$properties": {
-          "Attributes": {
-            "isVerified_only": {"Bool": false},
-            "leaderstats": {"Bool": true},
-            "resetAssetsOnDeath": {"Bool": false}
-          }
+      "PBSServer": {
+        "PBSAdmin": {
+          "$properties": {
+            "Attributes": {
+              "isVerified_only": {"Bool": false},
+              "leaderstats": {"Bool": true},
+              "resetAssetsOnDeath": {"Bool": false}
+            }
+          },
+          "$path": "src/PBSAdmin"
         },
-        "$path": "src/PBSAdmin"
+        "$path": "src/PBSServer"
       }
     },
 
