pbs:rewrite bytenet structure
(bytenet here is from wally instead of the rewrite modification, so should not be used within rewrite)

--- a/default.project.json
+++ b/default.project.json
@@ -3,6 +3,18 @@
   "tree": {
     "$className": "DataModel",
 
+    "ReplicatedStorage": {
+      "Utils": {
+        "$className": "Folder",
+        "ByteNet": {
+          "$path": "Packages/_Index/ffrostflame_bytenet@0.4.6/bytenet/default.project.json"
+        },
+        "ByteNetPackets": {
+          "$path": "src/ByteNetPackets"
+        }
+      }
+    },
+
     "ServerScriptService": {
       "PBSServer": {
         "PBSAdmin": {
