history log command (for rewrite)

--- a/default.project.json
+++ b/default.project.json
@@ -4,6 +4,9 @@
     "$className": "DataModel",
 
     "ReplicatedStorage": {
+      "PBSTools": {
+        "$path": "src/PBSTools"
+      },
       "Utils": {
         "$className": "Folder",
         "ByteNet": {
