rename none role to visitor
also set permission settings to default

--- a/default.project.json
+++ b/default.project.json
@@ -38,7 +38,7 @@
             "member": {
               "$className": "Folder"
             },
-            "none": {
+            "visitor": {
               "$className": "Folder",
               "PBSAdmin_Local": {
                 "$className": "ScreenGui",
