disable undefined_variable
already covered by luau lsp, and the luau std-lib for selene is outdated and does not include the vector library

--- a/selene.toml
+++ b/selene.toml
@@ -2,6 +2,7 @@ std = "roblox"
 
 [lints]
 multiple_statements = "allow"
+undefined_variable = "allow" #luau lsp will pick this up for us, and I dont want to fork the standard library to add the vector global library
 
 [config]
 multiple_statements = { one_line_if = "allow" }
