enable textchatservice for built place

--- a/default.project.json
+++ b/default.project.json
@@ -101,6 +101,11 @@
       "$properties": {
         "RespectFilteringEnabled": true
       }
+    },
+    "TextChatService": {
+      "$properties": {
+        "ChatVersion": "TextChatService"
+      }
     }
   }
 }
