--- a/default.project.json
+++ b/default.project.json
@@ -32,6 +32,7 @@
           "$path": "src/PBSAdmin",
           "RoleAssets": {
             "$className": "Folder",
+            "$ignoreUnknownInstances": false,
             "admin": {
               "$className": "Folder"
             },
