--- a/wally.toml
+++ b/wally.toml
@@ -5,4 +5,4 @@ registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
 [dependencies]
-bytenet = "ffrostflame/bytenet@0.4.6"
+bytenet = "ffrostflame/bytenet@0.4.6" # Rewrite uses its own fork, but this is fine for testing.
