--- a/aftman.toml
+++ b/aftman.toml
@@ -3,7 +3,7 @@
 
 # To add a new tool, add an entry to this table.
 [tools]
-rojo = "rojo-rbx/rojo@7.4.1"
+rojo = "rojo-rbx/rojo@7.5.1"
 wally = "UpliftGames/wally@0.3.2"
 stylua = "johnnymorganz/stylua@0.14.2"
-# rojo = "rojo-rbx/rojo@6.2.0"
+wally-package-types = "JohnnyMorganz/wally-package-types@1.4.2"
